Enforce coverage thresholds and test naming conventions